Corrigido o movimento da snake
Corrigido a lógica da snake, de modo a tornar mais eficiente.